--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 
 <body>
-    <section>
+    <header>
+
+    </header>
+    <section id="containerMain">
+        <h1 id="currentTemperature"></h1>
+        <h2 id="currentCity"></h2>
+        <p id="currentWeatherType"></p>
+    </section>
+    <section id="containerSub">
 
     </section>
+
     <script src="./script.js"></script>
 </body>
