--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
-    <section id="containerMain">
-        <h1 id="currentTemperature"></h1>
-        <h2 id="currentCity"></h2>
-        <p id="currentWeatherType"></p>
-    </section>
-    <section id="containerSub">
-
-    </section>
-
+   
+    <section class="container">
+        <section id="containerMain" class="main">
+            <nav><img src="design/design1/assets/menu.svg"></nav>
+            <h1 id="currentTemperature"></h1>
+            <h2 id="currentCity"></h2>
+            <p id="currentWeatherType"></p>
+            <img src="design/design1/assets/Group 13.png">
+            <section class="containerTime">
+            </section>
+        </section>
+            <div class="action-button"><img src="design/design1/assets/arrow-right.svg"></div>
+        <section id="containerSub" class="subMain">
+        </section>
+    </section> 
     <script src="./script.js"></script>
 </body>
