Feature: Weather Forecast Completed

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <p id="currentWeatherType"></p>
     </section>
     <section id="containerSub">
-
+        <div id="weekdays"></div>
+        <div id="weatherIcons"></div>
+        <div id="temperatures"></div>
     </section>
 
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script src="./sub.js"></script>
 </body>
