--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h2 id="currentCity"></h2>
         <p id="currentWeatherType"></p>
     </section>
+    <section id="sunTime" class="containerTime">
+    </section>
     <section id="containerSub">
 
     </section>
