--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-   
+
     <section class="container">
         <section id="containerMain" class="main">
             <nav><img src="design/design1/assets/menu.svg"></nav>
@@ -17,16 +17,16 @@
             <h2 id="currentCity"></h2>
             <p id="currentWeatherType"></p>
             <img src="design/design1/assets/Group 13.png">
-            <section id ="sunTime" class="containerTime">
+            <section id="sunTime" class="containerTime">
             </section>
         </section>
-            <div class="action-button"><img src="design/design1/assets/arrow-right.svg"></div>
+        <div class="action-button"><img src="design/design1/assets/arrow-right.svg"></div>
         <section id="containerSub" class="subMain">
-            <div id="weekdays"></div>
-            <div id="weatherIcons"></div>
-            <div id="temperatures"></div>
+            <div id="weekdays" class="subRow"></div>
+            <div id="weatherIcons" class="subRow"></div>
+            <div id="temperatures" class="subRow"></div>
         </section>
-    </section> 
+    </section>
 
 
 
