--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 id="currentTemperature"></h1>
             <h2 id="currentCity"></h2>
             <p id="currentWeatherType"></p>
-            <img src="design/design1/assets/Group 13.png">
+            <img src="./design/design1/img/sun.png">
             <section id="sunTime" class="containerTime">
             </section>
         </section>
