--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <div class="action-button"><img src="design/design1/assets/arrow-right.svg"></div>
         <section id="containerSub" class="subMain">
             <div id="weekdays" class="subRow"></div>
-            <div id="weatherIcons" class="subRow"></div>
-            <div id="temperatures" class="subRow"></div>
+            <section class="wrapper">
+                <div id="weatherIcons" class="subRow"></div>
+                <div id="temperatures" class="subRow"></div>
+            </section>
         </section>
     </section>
 
