current weather animations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="container">
         <section id="containerMain" class="main">
             <nav><img src="design/design1/assets/menu.svg"></nav>
+            <div id="currentWeather" class="weather-icon"></div>
             <h1 id="currentTemperature"></h1>
             <h2 id="currentCity"></h2>
             <p id="currentWeatherType"></p>
